kubernates/gateways/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ml-ops-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      credentialName: tls-secret
      minProtocolVersion: TLSV1_2
      maxProtocolVersion: TLSV1_3
      cipherSuites:
      - ECDHE-ECDSA-AES128-GCM-SHA256
      - ECDHE-RSA-AES128-GCM-SHA256
      - ECDHE-ECDSA-AES256-GCM-SHA384
      - ECDHE-RSA-AES256-GCM-SHA384
      - ECDHE-ECDSA-CHACHA20-POLY1305
      - ECDHE-RSA-CHACHA20-POLY1305
      - AES128-GCM-SHA256
      - AES256-GCM-SHA384
      - AES128-SHA256
      - AES256-SHA256
      - AES128-SHA
      - AES256-SHA
      - ECDHE-ECDSA-AES128-SHA256
      - ECDHE-RSA-AES128-SHA256
      - ECDHE-ECDSA-AES256-SHA384
      - ECDHE-RSA-AES256-SHA384
      - ECDHE-ECDSA-AES128-SHA
      - ECDHE-RSA-AES128-SHA
      - ECDHE-ECDSA-AES256-SHA
      - ECDHE-RSA-AES256-SHA
      - DHE-RSA-AES128-GCM-SHA256
      - DHE-RSA-AES256-GCM-SHA384
      - DHE-RSA-AES128-SHA256
      - DHE-RSA-AES256-SHA256
      - DHE-RSA-AES128-SHA
      - DHE-RSA-AES256-SHA
