kubernates/gateways/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ml-ops-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - ml-ops-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: i
        port:
          number: 80
